@@ -78,6 +78,7 @@ if(HAVE_RULES)
 endif()
 message(STATUS)
 message(STATUS "DISALLOW_THREAD_EXECUTOR = ${DISALLOW_THREAD_EXECUTOR}")
+message(STATUS "DISALLOW_PROCESS_EXECUTOR = ${DISALLOW_PROCESS_EXECUTOR}")
 message(STATUS "CMAKE_THREAD_LIBS_INIT = ${CMAKE_THREAD_LIBS_INIT}")
 message(STATUS)
 message(STATUS "USE_BUNDLED_TINYXML2 =  ${USE_BUNDLED_TINYXML2}")
